<resources>
    <string name="app_name">RPL</string>
    <string name="logo_uns"></string>
    <string name="logo"></string>
    //DASHBOARD
    <string name="nama_kelompok">Kelompok RPL 5C</string>
    <string name="anggota_kelompok1">(V3421067) Nabila Zarima</string>
    <string name="anggota_kelompok2">(V3421076) Rafael Kurniawan AP</string>
    <string name="anggota_kelompok3">(V3421079) Renda Gezag Pawestri</string>
    <string name="anggota_kelompok4">(V3421081) Reyhan Naufal H</string>
    <string name="anggota_kelompok5">(V3421095) Yusuf Ainurrofiq</string>
    <string name="button_next">Next</string>
    <string name="textview">TextView</string>

    //ListAnggota
    <string name="kelompok">Kelompok RPL 5C</string>
    <string name="btn_1">Nabila Zarima</string>
    <string name="btn_2">Rafael Kurniawan AP</string>
    <string name="btn_3">Renda Gezag P</string>
    <string name="btn_4">Reyhan Naufal H</string>
    <string name="btn_5">Yusuf Ainurrofiq</string>
    
    //Anggota1
    <string name="foto_nabila"></string>
    <string name="nama_1">Nabila Zarima</string>
    <string name="nim_1">V3421067</string>
    <string name="email_1">nabilazarima@gmail.com</string>
    <string name="alamat_1">Mruwak, Dagangan, Madiun</string>
    <string name="button_list1">List Anggota</string>

    //Anggota2
    <string name="foto_rafael"></string>
    <string name="nama_2">Rafael Kurniawan Albyseptra Pratama</string>
    <string name="nim_2">V3421076</string>
    <string name="email_2">rafaeelalbyy@gmail.com</string>
    <string name="alamat_2">Sumber, Banjarsari, Surakarta</string>
    <string name="button_list2">List Anggota</string>
    
    
    //Anggota3
    <string name="foto_renda"></string>
    <string name="nama_3">Renda Gezag Pawestri</string>
    <string name="nim_3">V3421079</string>
    <string name="email_3">renda.pawestrig@gmail.com</string>
    <string name="alamat_3">Sendang, Karanglor, Manyaran, Wonogiri</string>
    <string name="button_list3">List Anggota</string>
    
    //Anggota4
    <string name="foto_reyhan"></string>
    <string name="nama_4">Reyhan Naufal Hakim</string>
    <string name="nim_4">V3421081</string>
    <string name="email_4">reyhannaufal.h@gmail.com</string>
    <string name="alamat_4">Mojosongo, Jebres, Surakarta</string>
    <string name="nama_i">Nama Lengkap</string>
    <string name="nim_i">Nomor Induk Mahasiswa</string>
    <string name="email_i">Email</string>
    <string name="alamat_i">Alamat</string>
    
    //Anggota5
    <string name="foto_yusuf"></string>
    <string name="nama_5">Yusuf Ainurrofiq</string>
    <string name="nim_5">V3421095</string>
    <string name="email_5">ucupkemplink25@gmail.com</string>
    <string name="alamat_5">Barukan, Semarang</string>
    <string name="button_list5">List Anggota</string>
    
    <string name="kembali">Kembali</string>

</resources>
