<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".anggota4">

    <ImageButton
        android:id="@+id/foto4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00FFFFFF"
        app:srcCompat="@drawable/reyhan" />

    <TextView
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="2dp"
        android:text="@string/nama_i"
        android:textColor="#006CC1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nama_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama_4"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:text="@string/nim_i"
        android:textColor="#006CC1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nim_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim_4"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:text="@string/email_i"
        android:textColor="#006CC1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_4"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="2dp"
        android:text="@string/alamat_i"
        android:textColor="#006CC1"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/alamat_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamat_4"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/kembali4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:backgroundTint="#0165B5"
        android:text="@string/kembali"
        android:textAllCaps="false"
        android:textSize="16sp" />
</LinearLayout>
