<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Anggota3">

    <ImageView
        android:id="@+id/foto_renda"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/foto_rafael"
        app:srcCompat="@drawable/fotorenda" />

    <View
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/nama_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/nama_3"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold" />

   
    <EditText
        android:id="@+id/nim_5"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/nama_3"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nama_3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/nim_3"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="7dp"
        android:autofillHints="@string/email_3"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:hint="@string/email_3"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:text="@string/email_3"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/alamat_5"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/alamat_3"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/alamat_3"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/alamat_3"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
